[gd_scene load_steps=19 format=2]

[ext_resource path="res://Textures/UI/TextWindow/WindowSkin.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Dialog.gd" type="Script" id=2]
[ext_resource path="res://Textures/UI/TextWindow/Arrow.png" type="Texture" id=3]
[ext_resource path="res://Textures/UI/Stat/BarColour.png" type="Texture" id=4]
[ext_resource path="res://Textures/UI/Stat/BarBorder.png" type="Texture" id=5]
[ext_resource path="res://Scripts/HealthBar.gd" type="Script" id=6]
[ext_resource path="res://Fonts/MorrisRoman-Black.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://Textures/UI/Stat/BarBack.png" type="Texture" id=8]
[ext_resource path="res://Scripts/ManaBar.gd" type="Script" id=9]
[ext_resource path="res://Scripts/ExpBar.gd" type="Script" id=10]
[ext_resource path="res://Scripts/Pause.gd" type="Script" id=11]
[ext_resource path="res://Scripts/GUI.gd" type="Script" id=12]
[ext_resource path="res://Util/Resources/QuestLog.tscn" type="PackedScene" id=13]

[sub_resource type="Animation" id=1]
resource_name = "ArrowBounce"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Arrow:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 837, 565 ), Vector2( 837, 567 ) ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Arrow:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 837, 565 ) ]
}

[sub_resource type="DynamicFont" id=3]
size = 9
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=4]
size = 9
font_data = ExtResource( 7 )

[sub_resource type="Theme" id=5]

[node name="GUI" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 12 )

[node name="Dialog" type="Control" parent="."]
margin_top = -1.0
margin_right = 36.0
margin_bottom = 35.0
script = ExtResource( 2 )

[node name="TextureRect" type="TextureRect" parent="Dialog"]
margin_left = 162.0
margin_top = 414.0
margin_right = 882.0
margin_bottom = 595.0
texture = ExtResource( 1 )

[node name="DialogText" type="RichTextLabel" parent="Dialog"]
margin_left = 192.0
margin_top = 438.0
margin_right = 852.0
margin_bottom = 565.0
rect_pivot_offset = Vector2( 280, 75 )
bbcode_enabled = true

[node name="CharacterTimer" type="Timer" parent="Dialog"]
wait_time = 0.5
autostart = true

[node name="Arrow" type="Sprite" parent="Dialog"]
position = Vector2( 837, 565 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Dialog"]
autoplay = "ArrowBounce"
anims/ArrowBounce = SubResource( 1 )
anims/RESET = SubResource( 2 )

[node name="Health" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 6 )

[node name="HealthBarUnder" type="TextureProgress" parent="Health"]
margin_left = 5.0
margin_top = 4.0
margin_right = 165.0
margin_bottom = 20.0
value = 100.0
texture_under = ExtResource( 8 )
texture_progress = ExtResource( 4 )
tint_progress = Color( 0.72549, 0.160784, 0.101961, 1 )
nine_patch_stretch = true

[node name="HealthBar" type="TextureProgress" parent="Health"]
margin_left = 4.0
margin_top = 4.0
margin_right = 164.0
margin_bottom = 20.0
value = 100.0
texture_over = ExtResource( 5 )
texture_progress = ExtResource( 4 )
tint_progress = Color( 0.227451, 0.796078, 0.129412, 1 )
nine_patch_stretch = true

[node name="Tween" type="Tween" parent="Health"]

[node name="HP" type="Label" parent="Health"]
margin_left = 108.0
margin_top = 9.0
margin_right = 149.0
margin_bottom = 23.0
custom_fonts/font = SubResource( 3 )
text = "HP/HP"

[node name="Mana" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 9 )

[node name="ManaBarUnder" type="TextureProgress" parent="Mana"]
margin_left = 5.0
margin_top = 22.0
margin_right = 165.0
margin_bottom = 38.0
value = 100.0
texture_under = ExtResource( 8 )
texture_progress = ExtResource( 4 )
tint_progress = Color( 0.792157, 0.101961, 0.101961, 1 )
nine_patch_stretch = true

[node name="ManaBar" type="TextureProgress" parent="Mana"]
margin_left = 5.0
margin_top = 22.0
margin_right = 165.0
margin_bottom = 38.0
value = 100.0
texture_over = ExtResource( 5 )
texture_progress = ExtResource( 4 )
tint_progress = Color( 0.25098, 0.298039, 0.658824, 1 )
nine_patch_stretch = true

[node name="Tween" type="Tween" parent="Mana"]

[node name="MP" type="Label" parent="Mana"]
margin_left = 106.0
margin_top = 26.0
margin_right = 151.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 4 )
text = "MP/MP"

[node name="Exp" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 10 )

[node name="ExpBar" type="TextureProgress" parent="Exp"]
margin_left = 5.0
margin_top = 40.0
margin_right = 165.0
margin_bottom = 56.0
value = 100.0
texture_under = ExtResource( 8 )
texture_over = ExtResource( 5 )
texture_progress = ExtResource( 4 )
tint_progress = Color( 0.960784, 0.760784, 0.282353, 1 )
nine_patch_stretch = true

[node name="Tween" type="Tween" parent="Exp"]

[node name="XP" type="Label" parent="Exp"]
margin_left = 106.0
margin_top = 44.0
margin_right = 151.0
margin_bottom = 58.0
custom_fonts/font = SubResource( 4 )
text = "XP/XP"

[node name="Pause" type="Control" parent="."]
pause_mode = 2
visible = false
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 11 )

[node name="ColorRect" type="ColorRect" parent="Pause"]
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0.12549, 0.113725, 0.113725, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="Pause"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 291.0
margin_top = 60.0
margin_right = 729.0
margin_bottom = 426.0
rect_min_size = Vector2( 282, 352 )
custom_constants/separation = 22
alignment = 1

[node name="Resume" type="Button" parent="Pause/VBoxContainer"]
margin_top = 131.0
margin_right = 478.0
margin_bottom = 151.0
theme = SubResource( 5 )
text = "Resume"

[node name="Quests" type="Button" parent="Pause/VBoxContainer"]
margin_right = 58.0
margin_bottom = 20.0
text = "Quests"

[node name="Options" type="Button" parent="Pause/VBoxContainer"]
margin_top = 173.0
margin_right = 478.0
margin_bottom = 193.0
text = "Options"

[node name="Exit" type="Button" parent="Pause/VBoxContainer"]
margin_top = 215.0
margin_right = 478.0
margin_bottom = 235.0
custom_constants/hseparation = 20
text = "Exit"

[node name="QuestLog" parent="." instance=ExtResource( 13 )]
visible = false
margin_left = 1.0
margin_top = 25.0
margin_right = 41.0
margin_bottom = 65.0

[connection signal="timeout" from="Dialog/CharacterTimer" to="Dialog" method="_on_CharacterTimer_timeout"]
[connection signal="pressed" from="Pause/VBoxContainer/Resume" to="Pause" method="_on_Resume_pressed"]
[connection signal="pressed" from="Pause/VBoxContainer/Quests" to="Pause" method="_on_Quests_pressed"]
[connection signal="pressed" from="Pause/VBoxContainer/Exit" to="Pause" method="_on_Exit_pressed"]
